Fix guide heading and links on mobile

--- a/_includes/styles/docnav.scss
+++ b/_includes/styles/docnav.scss
@@ -461,6 +461,8 @@
   }
 
   @media (max-width: 880px) {
+    box-shadow: none;
+    
     // Show open button by default on mobile
     &__control--open {
       display: block;
@@ -480,9 +482,14 @@
       justify-content: center;
       align-items: center;
       gap: var(--gap-half);
+      padding: 10px 0 0 0;
+      margin: 0;
+      height: auto;
 
       img {
         max-width: 30px;
+        height: auto;
+        margin: auto;
       }
     }
 
