--- a/_includes/styles/nav.scss
+++ b/_includes/styles/nav.scss
@@ -69,7 +69,7 @@
       position: relative;
     }
 
-    > li > a, .l-header__link-trigger {
+    > li > a:not(.mobile-menu-panel a), .l-header__link-trigger {
       height: 48px;
     }
 
